--- a/fetshdog.html
+++ b/fetshdog.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <select id="my-select" class="slectNames">
-        <option>hey motherfucker</option>
+        <option>choose</option>
         
     </select >
     <div id="imgId">
